tests/ui/frontmatter/fence-unclosed-1.stderr
error: unclosed frontmatter
  --> $DIR/fence-unclosed-1.rs:1:1
   |
LL | / ----cargo
...  |
LL | | fn main() {}
   | |_____________^
   |
note: frontmatter opening here was not closed
  --> $DIR/fence-unclosed-1.rs:1:1
   |
LL | ----cargo
   | ^^^^

error[E0601]: `main` function not found in crate `fence_unclosed_1`
  --> $DIR/fence-unclosed-1.rs:9:14
   |
LL | fn main() {}
   |             ^ consider adding a `main` function to `$DIR/fence-unclosed-1.rs`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0601`.
